Added ubuntu fonts

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,4 +30,4 @@ default = ["font-iosevka_term"]
 font-iosevka_term = []
 font-anonymous_pro = []
 font-camingo_code = []
-font-jetbrains = []
+font-ubuntu = []
