--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ rusttype = "0.9"
 terminal_size = "0.3.0"
 unicode-segmentation = "1.10.1"
 vte = "0.13"
+lazy_static = "1.4.0"
 
 [dependencies.clap]
 features = ["derive"]
