--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,5 @@
 [dependencies]
+viuer = { path = "../viuer" }
 getopts = "0.2.21"
 image = "0.24.7"
 imageproc = "0.23"
@@ -37,4 +38,4 @@ license = "MIT"
 name = "nu_plugin_image"
 readme = "README.md"
 repository = "https://github.com/FMotalleb/nu_plugin_image"
-version = "0.2.0"
+version = "0.2.1"
