--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [dependencies]
 viuer = { git = "https://github.com/FMotalleb/viuer.git" }
-getopts = "0.2.21"
+termcolor = "1.1"
+ansi_colours = "1.0"
+crossterm = "0.27"
 image = "0.24.7"
 imageproc = "0.23"
 include-flate = "0.3"
 rusttype = "0.9"
-terminal_size = "0.3.0"
 unicode-segmentation = "1.10.1"
 vte = "0.13"
 lazy_static = "1.4.0"
