minor: migrated to tracing logger

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ include-flate = "0.3"
 ab_glyph = "0.2.25"
 vte = "0.13"
 lazy_static = "1.4.0"
+# Logging
+tracing = "0.1"
+tracing-subscriber = "0.3"
 
 [dependencies.clap]
 features = ["derive"]
