--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,16 +1,30 @@
----
-on: workflow_dispatch
+name: Publish Crate
+
+on:
+  push:
+    branches:
+      - main
+    paths:
+      - Cargo.tom
+  release:
+  workflow_dispatch: 
+    
+
 jobs:
   publish:
-    name: Publish to crates.io
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Login
-      run: cargo login ${{ secrets.CARGO_KEY }}
+      - name: Set up Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
 
-    - name: Push
-      run: cargo publish
-    
+      - name: Publish to crates.io
+        uses: katyo/publish-crates@v2
+        with:
+          registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
