--- a/.github/workflows/dependency-update.yaml
+++ b/.github/workflows/dependency-update.yaml
@@ -15,35 +15,10 @@ jobs:
               version: "*"
         -   uses: actions/checkout@v2
         -   name: prepare
-            shell: nu {0}
+            shell: nu -c {0}
             run: |
-                nu -c '
-                  cargo install cargo-edit cargo-upgrades nu_plugin_inc -f
-                '
-        -   name: Update Dependencies
-            shell: nu {0}
-            run: |
-                nu -c '
-                  register /home/runner/.cargo/bin/nu_plugin_inc
-                  cargo upgrade
-                  let changed = git status -s | is-empty | not $in
-                  if ($changed) {
-                    open Cargo.toml 
-                      | upsert package.version ( $in 
-                              | get package.version
-                              | inc --patch
-                          )
-                      | save Cargo.toml -f
-
-                    open package.nuon 
-                      | upsert version ( open Cargo.toml | get package.version )
-                      | save package.nuon -f
-                    cargo upgrade
-                  }
-                  
-                  echo { "changed": $changed }
-                '
-                
+              nu -c $(http get https://raw.githubusercontent.com/FMotalleb/nushell_sync_script/refs/heads/main/bump_dependencies.nu)
         -   uses: EndBug/add-and-commit@v9 
+            
             with:
                 author_name: GitHub-Action
