--- a/.github/workflows/dependency-update.yaml
+++ b/.github/workflows/dependency-update.yaml
@@ -1,7 +1,7 @@
 on:
-    workflow_dispatch:
-    schedule:
-      - cron: '0 0 */2 * *' 
+  workflow_dispatch:
+  schedule:
+    - cron: '0 0 */2 * *' 
   
 name: Update dependencies
   
@@ -9,18 +9,26 @@ jobs:
   update:
     runs-on: ubuntu-latest
     steps:
-        -   name: Setup Nushell
-            uses: hustcer/setup-nu@main
-            with:
-              version: "*"
-        -   uses: actions/checkout@v2
-        -   name: prepare
-            shell: nu {0}
-            run: |
-              http get https://raw.githubusercontent.com/FMotalleb/nushell_sync_script/refs/heads/main/bump_dependencies.nu
-                | save /tmp/update.nu
-              nu /tmp/update.nu
-        -   uses: EndBug/add-and-commit@v9 
-            
-            with:
-                author_name: GitHub-Action
+      - name: Setup Nushell
+        uses: hustcer/setup-nu@main
+        with:
+          version: "*"
+      - uses: actions/checkout@v2
+      - name: upgrade
+        id: upgrade
+        shell: nu {0}
+        run: |
+          http get https://raw.githubusercontent.com/FMotalleb/nushell_sync_script/refs/heads/main/bump_dependencies.nu
+            | save /tmp/update.nu
+          nu /tmp/update.nu
+          open Cargo.toml | get package.version | str trim | echo $in
+      - uses: EndBug/add-and-commit@v9 
+        with:
+          author_name: GitHub-Action
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: v${{ steps.upgrade.outputs.stdout }}
+          name: Release v${{ steps.upgrade.outputs.stdout }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
